--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           go-version: '1.22.4'
       - name: Test linux
-        run: go test -v ./...
+        run: make test
   
   test-windows:
     runs-on: windows-latest
@@ -33,7 +33,7 @@ jobs:
         with:
           go-version: '1.22.4'
       - name: Test windows
-        run: go test -v ./...
+        run: make test
   
   build:
     runs-on: ubuntu-latest
@@ -46,4 +46,4 @@ jobs:
           go-version: '1.22.4'
 
       - name: Build
-        run: go build -v ./...
+        run: make build
