--- a/config/stage.yaml
+++ b/config/stage.yaml
@@ -1,8 +1,7 @@
-env: dev
-db_path: ./resources/db/dev.db
+env: stage
 
 server:
-  port: 8100
+  port: 8101
   host: localhost
   timeout: 4s
   idle_timeout: 60s
