--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,8 @@ services:
       POSTGRES_PASSWORD: "123"
     ports:
       - "5532:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
