k-16 add role repo, perm repo, role service perm service, add jwt authentication

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ DB_NAME=kinolove
 DB_DRIVER=postgresql
 
 DB_URL=${DB_DRIVER}://${DB_USR}:${DB_PWD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+
+# Security
+
+JWT_SEC=prototype1337
+JWT_ALG=HS256
+JWT_EXP=15m
