--- a/.env.example.windows
+++ b/.env.example.windows
@@ -1,6 +1,6 @@
 # Environment
 
-CONFIG_PATH=./config/dev.yaml
+CONFIG_PATH=.\config\dev.yaml
 MIGRATIONS_PATH=.\storage\migrations
 
 # Database
@@ -13,3 +13,9 @@ DB_NAME=kinolove
 DB_DRIVER=postgresql
 
 DB_URL=%DB_DRIVER%://%DB_USR%:%DB_PWD%@%DB_HOST%:%DB_PORT%/%DB_NAME%
+
+# Security
+
+JWT_SEC=prototype1337
+JWT_ALG=HS256
+JWT_EXP=15m
